--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     rounded-lg
                 "
             >
-                <h1 class="text-3xl text-bold">Elephant vs Lion</h1>
+                <h1 class="text-3xl text-bold">Blimbing vs Jambu</h1>
 
                 {% if uploaded_image %}
                 <img
